--- a/src/main/resources/sample/asteralbank/Main.fxml
+++ b/src/main/resources/sample/asteralbank/Main.fxml
@@ -60,12 +60,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnAboutUs" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnAboutUs" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="BtnTurnover" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnTurnover" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="BtnTurnover" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnTurnover" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -105,12 +100,7 @@
                   <Font name="Freestyle Script" size="25.0" />
                </font>
             </Label>
-            <Label text="Turnover" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font name="Freestyle Script" size="25.0" />
-               </font>
-            </Label>
-            <Label text="About Us" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+            <Label text="Turnover" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                <font>
                   <Font name="Freestyle Script" size="25.0" />
                </font>
@@ -125,7 +115,7 @@
                   <Font name="Freestyle Script" size="25.0" />
                </font>
             </Label>
-            <ImageView disable="true" fitHeight="78.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <ImageView disable="true" fitHeight="78.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <image>
                   <Image url="@Money.png" />
                </image>
@@ -138,11 +128,6 @@
             <ImageView disable="true" fitHeight="76.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <image>
                   <Image url="@Check.png" />
-               </image>
-            </ImageView>
-            <ImageView disable="true" fitHeight="48.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <image>
-                  <Image url="@About%20Us.png" />
                </image>
             </ImageView>
             <ImageView disable="true" fitHeight="54.0" fitWidth="53.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
@@ -170,6 +155,21 @@
                   <Image url="@Account type.png" />
                </image>
             </ImageView>
+            <Button fx:id="BtnAboutUs" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnAboutUs" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView disable="true" fitHeight="48.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <image>
+                  <Image url="@About%20Us.png" />
+               </image>
+            </ImageView>
+            <Label text="About Us" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font name="Freestyle Script" size="25.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
       <Label layoutX="120.0" layoutY="3.0" text="Astral Bank" textFill="#bc6c25">
