--- a/src/main/resources/sample/asteralbank/check.fxml
+++ b/src/main/resources/sample/asteralbank/check.fxml
@@ -33,74 +33,74 @@
         </Button>
       <AnchorPane fx:id="checkdata1" layoutY="108.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="221.0" prefWidth="409.0" styleClass="jfx-tab-pane" stylesheets="@FirstCss.css">
          <children>
-            <Label layoutX="256.0" layoutY="58.0" text="شماره حساب مقصد :">
+            <Label layoutY="59.0" text="Destination account number:">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="318.0" layoutY="100.0" text="مبلغ چک :">
+            <Label layoutY="140.0" text="Check due date:">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="271.0" layoutY="138.0" text="تاریخ سررسید چک :">
+            <TextField fx:id="year" alignment="CENTER" layoutX="128.0" layoutY="138.0" prefHeight="18.0" prefWidth="40.0" promptText="Year" styleClass="TT" stylesheets="@FirstCss.css" />
+            <TextField fx:id="month" alignment="CENTER" layoutX="192.0" layoutY="138.0" prefHeight="18.0" prefWidth="40.0" promptText="Month" styleClass="TT" />
+            <TextField fx:id="day" alignment="CENTER" layoutX="259.0" layoutY="137.0" prefHeight="18.0" prefWidth="40.0" promptText="Day" styleClass="TT" stylesheets="@FirstCss.css" />
+            <Line endX="100.0" layoutX="85.0" layoutY="140.0" startX="89.39726257324219" startY="19.7608642578125" />
+            <Line endX="100.0" layoutX="151.0" layoutY="140.0" startX="89.39726257324219" startY="19.7608642578125" />
+            <TextField fx:id="checkamountDigit" alignment="CENTER_RIGHT" layoutX="219.0" layoutY="97.0" prefHeight="28.0" prefWidth="176.0" promptText="in letters (Persian)" styleClass="TT" />
+            <TextField fx:id="checkToNum1" layoutX="213.0" layoutY="56.0" styleClass="TT" />
+            <TextField fx:id="checkid1" layoutX="213.0" layoutY="15.0" styleClass="TT" />
+            <Label layoutY="18.0" text="Check fishing number:">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="year" alignment="CENTER" layoutX="55.0" layoutY="143.0" prefHeight="18.0" prefWidth="40.0" promptText="سال" styleClass="TT" stylesheets="@FirstCss.css" />
-            <TextField fx:id="month" alignment="CENTER" layoutX="127.0" layoutY="144.0" prefHeight="18.0" prefWidth="40.0" promptText="ماه" styleClass="TT" />
-            <TextField fx:id="day" alignment="CENTER" layoutX="193.0" layoutY="145.0" prefHeight="18.0" prefWidth="40.0" promptText="روز" styleClass="TT" stylesheets="@FirstCss.css" />
-            <Line endX="100.0" layoutX="15.0" layoutY="147.0" startX="89.39726257324219" startY="19.7608642578125" />
-            <Line endX="100.0" layoutX="89.0" layoutY="148.0" startX="89.39726257324219" startY="19.7608642578125" />
-            <TextField fx:id="checkamountDigit" alignment="CENTER_RIGHT" layoutX="9.0" layoutY="96.0" prefHeight="28.0" prefWidth="188.0" promptText="به حروف" styleClass="TT" />
-            <TextField fx:id="checkamountNum" alignment="CENTER_RIGHT" layoutX="205.0" layoutY="97.0" prefHeight="27.0" prefWidth="102.0" promptText="به رقم" styleClass="TT" />
-            <TextField fx:id="checkToNum1" layoutX="95.0" layoutY="55.0" styleClass="TT" />
-            <Button layoutX="184.0" layoutY="180.0" mnemonicParsing="false" onAction="#showcheck" styleClass="Button-Charge" text="ادامه" />
-            <TextField fx:id="checkid1" layoutX="95.0" layoutY="14.0" styleClass="TT" />
-            <Label layoutX="271.0" layoutY="17.0" text="شماره صیادی چک:">
+            <Label layoutY="101.0" text="Check amount:">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
+            <TextField fx:id="checkamountNum" layoutX="110.0" layoutY="98.0" prefHeight="27.0" prefWidth="102.0" promptText="to the figure" styleClass="TT" />
+            <Button layoutX="161.0" layoutY="194.0" mnemonicParsing="false" onAction="#showcheck" styleClass="Button-Charge" text="Continuation" />
          </children>
       </AnchorPane>
-      <Label fx:id="checkid2" layoutX="322.0" layoutY="344.0" text="شماره چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkid2" layoutX="28.0" layoutY="344.0" text="Check number :" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkamount2" layoutX="330.0" layoutY="375.0" text="مبلغ چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkamount2" layoutX="28.0" layoutY="375.0" text="Check amount :" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkdata2" layoutX="326.0" layoutY="406.0" text="تاریخ چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkdata2" layoutX="30.0" layoutY="406.0" text="Check date :" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkToNum2" layoutX="265.0" layoutY="437.0" text="شماره حساب مقصد" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkToNum2" layoutX="28.0" layoutY="433.0" text="Destination account number :" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkdata" layoutX="120.0" layoutY="406.0" text="شماره چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkdata" layoutX="261.0" layoutY="406.0" text="شماره چک" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkamount" layoutX="120.0" layoutY="375.0" text="شماره چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkamount" layoutX="261.0" layoutY="375.0" text="شماره چک" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkid" layoutX="120.0" layoutY="344.0" text="شماره چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkid" layoutX="261.0" layoutY="344.0" text="شماره چک" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="checkToNum" layoutX="120.0" layoutY="437.0" text="شماره چک" textFill="#cdc3c3" visible="false">
+      <Label fx:id="checkToNum" layoutX="261.0" layoutY="433.0" text="شماره چک" textFill="#cdc3c3" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
